test/files/pos/t10350b/Top.java

package p;

public class Top {
}
