test/files/neg/t12159f/Z.java
// javaVersion: 17+
package p;

final class Z1 extends Z {
}

final class Z2 extends Z {
}
